--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,17 @@ pico-args = "0.5.0"
 tinyjson = "2.5.1"
 
 # Solution dependencies
+glam = "0.30.9"
+itertools = "0.14.0"
+num = "0.4.3"
+regex = "1.12.2"
+anyhow = "1.0.100"
+rayon = "1.11.0"
+
+
+[lints.clippy]
+unnecessary_cast = "deny"
+cast_lossless = "deny"
+cast_possible_truncation = "deny"
+cast_possible_wrap = "deny"
+cast_sign_loss = "deny"
